--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #033;
+    background-color: #006699;
     overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: ##0099cc;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
