--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+
+
+
+.titles{
+    
+
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #006699;
@@ -7,7 +13,7 @@
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    color: #0099cc;
+    color: #99e6ff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
