--- a/main.css
+++ b/main.css
@@ -32,7 +32,20 @@
     color: white;
 }
     
-.interests{
-    text-align: center;
-    
+ol
+    {
+       display: inline-block;
+       margin-left: auto;
+       margin-right: auto;
+    }
+    .text-center {
+        text-align: center;
+    }
+    ol.text-center {
+        list-style-position: inside;
+        padding-left: inherit; /*Get rid of padding to center correctly*/
+    }
+    ol.text-center > li::before {
+        content: "\A";
+        white-space: pre;
     }
